# soc-threat-detection-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cli/: main.py  triage.py
config/: config.yaml
dashboard/: terminal_ui.py
docs/: architecture.md  detection_engineering_notes.md  rule_authoring_guide.md
engine/: alert_store.py  correlator.py  enricher.py  evtx_parser.py  parser.py  reporter.py  rule_engine.py  scorer.py
output/: alerts.csv  alerts.db  alerts.json  incident_report.html
rules/: README.md  network_connection.yaml  process_access.yaml  process_creation.yaml  registry_modification.yaml
sample_data/: expected_alerts.json  sysmon_events_sample.xml
tests/: .gitignore  test_alert_store.py  test_correlator.py  test_evtx_parser.py  test_parser.py  test_reporter.py  test_rule_engine.py  test_scorer.py
tools/: sigma_converter.py
